--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     
     
     <meta property="og:url" content="http://kc13.github.io/">
-  <meta property="og:site_name" content="Ananke">
+  <meta property="og:site_name" content="Test"> 
   <meta property="og:title" content="Ananke: a Hugo Theme">
   <meta property="og:description" content="The last theme you&#39;ll ever need. Maybe.">
   <meta property="og:locale" content="en_us">
