--- a/public/proj/index.html
+++ b/public/proj/index.html
@@ -179,14 +179,14 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Projects</span>
     <h1 class="f3 near-black">
-      <a href="/proj/prep1/" class="link black dim">
+      <a href="/proj/proj4/" class="link black dim">
         Encoding of motor sequences in primate globus pallidus and motor cortex
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       <p>How is GP and M1 activity reorganized by skilled versus unskilled movement execution?</p>
     </div>
-    <a href="/proj/prep1/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/proj/proj4/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
@@ -197,14 +197,14 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Projects</span>
     <h1 class="f3 near-black">
-      <a href="/proj/prep2/" class="link black dim">
+      <a href="/proj/proj5/" class="link black dim">
         Cerebellar- and basal ganglia-recipient thalamus activity during movement preparation and execution
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
-      <p>In these motor thalmaus subregions, how and when does single-unit spiking reflect established properties of their cerebellar and basal ganglia afferents?</p>
+      <p>In these motor thalamus subregions, how and when does single-unit spiking reflect established properties of their cerebellar and basal ganglia afferents?</p>
     </div>
-    <a href="/proj/prep2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/proj/proj5/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
